refresh and google search

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta name="google-site-verification" content="vbTsBv2v9kivAr-XdfPOiqOFHKG-C_v1RiVmDMdbL34" />
+    <meta name="keywords" content="studentvue, sucks, student vue sucks, studentvue sucks, studentvuesucks, grade, grade app, studentvuesucks grades, mcps grades, mcps studentvue, mcps" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
