--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Website for mcps students to check your grades"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -26,10 +26,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>StudentVue Sucks - Grade Portal</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>
+      <h1>StudentVue Sucks - Grade Portal</h1>
+      <p>Website for mcps students to check your grades</p>
+    </noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
